--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <div class="game-specifics">
         <div class="button-container">
-          <button>Start Game</button>
+          <button class="start-button">Start Game</button>
           <button>Restart Game</button>
         </div>
         <div class="game-rules">
@@ -134,10 +134,10 @@
     </main>
     <footer>
       <div class="lives-wrapper">
-        <h3>Lives: 3</h3>
+        <h3>Lives: <span>3</span></h3>
       </div>
       <div class="result-wrapper">
-        <h3>Result</h3>
+        <h3 class="result">Result</h3>
       </div>
     </footer>
     <script src="./app.js"></script>
