--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Save Poppy The Puppy</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -15,7 +21,7 @@
       <div class="game-specifics">
         <div class="button-container">
           <button class="start-button">Start Game</button>
-          <button>Restart Game</button>
+          <button class="restart-button">Restart Game</button>
         </div>
         <div class="game-rules">
           <h2>Game Rules</h2>
@@ -92,7 +98,7 @@
           <div class="row-seven"></div>
           <div class="row-seven"></div>
           <div class="row-seven"></div>
-          <div class="row-seven"></div>
+          <div class="row-seven" id="wave"></div>
           <div class="row-seven"></div>
           <div class="row-seven"></div>
           <div class="row-seven"></div>
