--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
         <div class="game-rules">
           <h2>Game Rules</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            obcaecati dolorum a perspiciatis nisi! Sint laborum eveniet, neque
-            aut maiores recusandae architecto autem error a dicta quisquam
-            voluptatum molestiae odit?
+            Poppy has been separated from her family and needs your help to get
+            home! Use the arrow keys to guide poppy across the river.
+            <br />
+            The rubber dingys will help you float across the river!
+            <br />
+            Watch out for the bears they might eat you and the puppy snatcher
+            may well snatch you too!
+            <br />
+            You have three lives to get Poppy across the river, otherwise Game
+            Over!
+            <br />
+            Good Luck!
+            <br />
+            Press the start button to begin the game...
           </p>
         </div>
       </div>
