--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
       rel="stylesheet"
     />
+    <audio
+      src="./audio/Loyalty_Freak_Music_-_05_-_Ice_Cream_with_you.mp3"
+    ></audio>
   </head>
   <body>
     <header>
@@ -19,6 +22,10 @@
     </header>
     <main>
       <div class="game-specifics">
+        <div class="volume-container">
+          <label for="range">Volume</label>
+          <input type="range" id="volume" name="volume" min="0" max="1" />
+        </div>
         <div class="button-container">
           <button class="start-button">Start Game</button>
           <button class="restart-button">Restart Game</button>
