--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
   </head>
   <body>
     <header>
+      <div class="puppy-image">
+        <img src="./images/puppy1.png" alt="puppy" width="80px" height="80px" />
+      </div>
       <h1>Save Poppy The Puppy</h1>
+      <div class="puppy-image-two">
+        <img
+          src="./images/puppy1.png"
+          alt="puppy-two"
+          width="80px"
+          height="80px"
+        />
+      </div>
     </header>
     <main>
       <div class="game-specifics">
